legacy_tests/fixtures/components/invalid-foldable/aware.blade.php
@blaze(fold: true)

@aware(['variant' => 'default'])

<div class="item item-{{ $variant }}">
    {{ $slot }}
</div>
